Update appointment form
Update appointment form now loads correct data. It also converts the time from UTC to local time correctly. Still need to post the update back to the database. I also still need to add the delete appointment functionality.

--- a/wgu_software_2/wgu_software_2.csproj
+++ b/wgu_software_2/wgu_software_2.csproj
@@ -59,6 +59,12 @@
     <Compile Include="AppointmentBaseForm.Designer.cs">
       <DependentUpon>AppointmentBaseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UpdateAppointmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateAppointmentForm.Designer.cs">
+      <DependentUpon>UpdateAppointmentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UpdateCustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AppointmentBaseForm.resx">
       <DependentUpon>AppointmentBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateAppointmentForm.resx">
+      <DependentUpon>UpdateAppointmentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateCustomerForm.resx">
       <DependentUpon>UpdateCustomerForm.cs</DependentUpon>
