--- a/wgu_software_2/wgu_software_2.csproj
+++ b/wgu_software_2/wgu_software_2.csproj
@@ -36,6 +36,7 @@
     <Reference Include="MySql.Data, Version=8.0.22.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,6 +59,12 @@
     </Compile>
     <Compile Include="AppointmentBaseForm.Designer.cs">
       <DependentUpon>AppointmentBaseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm.Designer.cs">
+      <DependentUpon>ReportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="UpdateAppointmentForm.cs">
       <SubType>Form</SubType>
@@ -97,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AppointmentBaseForm.resx">
       <DependentUpon>AppointmentBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm.resx">
+      <DependentUpon>ReportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateAppointmentForm.resx">
       <DependentUpon>UpdateAppointmentForm.cs</DependentUpon>
